--- a/FBLAQuiz/View/Base.lproj/Main.storyboard
+++ b/FBLAQuiz/View/Base.lproj/Main.storyboard
@@ -33,7 +33,7 @@
                                     <action selector="startBtnPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="lki-pc-9lS"/>
                                 </connections>
                             </button>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1xM-yj-nYs">
+                            <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1xM-yj-nYs">
                                 <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cu2-JX-8Zt" userLabel="Header">
